[10-184] Pet Clinic - OwnerMapSvc CRUD tests, closes #41